--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Bienvenido a Petiiii</title>
+  <title>Bienvenido a Peti</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <p><a class="navbar-brand js-scroll-trigger" href="#page-top">Peti</a></p>
+      <p><a class="navbar-brand js-scroll-trigger" href="#page-top">Petiiii</a></p>
       <p class="site-description">Ayuda a mascotas necesitadas		</p>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <!--Menú-->
