--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
   <!-- Plugin CSS -->
   <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
-  
+
   <!-- Link Swiper's CSS -->
-	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.css" rel="stylesheet">
+  
+  <link href="css/iconmoon-fonts.css" rel="stylesheet">
 
 </head>
 
@@ -37,7 +39,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <p><a class="navbar-brand js-scroll-trigger" href="#page-top">Peti</a></p>
-      <p class="site-description">Ayuda a mascotas necesitadas		</p>
+      <p class="site-description">Ayuda a mascotas necesitadas </p>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <!--Menú-->
         <i class="fas fa-bars"></i>
@@ -59,7 +61,9 @@
   </nav>
 
   <header class="masthead">
-    <svg id="waveTop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path  d="M0,192L80,160C160,128,320,64,480,80C640,96,800,192,960,208C1120,224,1280,160,1360,128L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+    <svg id="waveTop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path d="M0,192L80,160C160,128,320,64,480,80C640,96,800,192,960,208C1120,224,1280,160,1360,128L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+    </svg>
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
@@ -100,6 +104,7 @@
             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
           </div>
+          <div class="small-text">* Requiere Android OS 4.3+ or Apple iOS 9.3+</div>
         </div>
       </div>
     </div>
@@ -107,11 +112,11 @@
 
   <section class="features" id="features">
     <div class="container">
-      <div class="section-heading text-center">
+      <!--<div class="section-heading text-center">
         <h2>Conoce más sobre Peti</h2>
         <p class="text-muted">¡Mira lo que puedes hacer y descubre cómo puedes ayudar o recibir ayuda!</p>
         <hr>
-      </div>
+      </div>-->
       <div class="row">
         <div class="col-lg-4 my-auto">
           <div class="device-container">
@@ -120,28 +125,27 @@
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                   <!--<img src="img/demo-screen-1.jpg" class="img-fluid" alt="">-->
-                  
+
                   <!-- Swiper -->
-                  <div class="swiper-container">
-                      <div class="swiper-wrapper">
-                          <div class="swiper-slide"><img src="img/screens/home.png" class="img-fluid" alt=""></div>
-                          <div class="swiper-slide"><img src="img/screens/reports.png" class="img-fluid" alt=""></div>
-                          <div class="swiper-slide"><img src="img/screens/search.png" class="img-fluid" alt=""></div>
-                          <div class="swiper-slide"><img src="img/screens/codigopeti.png" class="img-fluid" alt=""></div>
-                          <div class="swiper-slide"><img src="img/screens/mypets.png" class="img-fluid" alt=""></div>
-                          <div class="swiper-slide"><img src="img/screens/favorites.png" class="img-fluid" alt=""></div>
-                          <!--<div class="swiper-slide">Slide 7</div>
+                  <div class="swiper-phone">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide"><img src="img/screens/home.png" class="img-fluid" alt=""></div>
+                      <div class="swiper-slide"><img src="img/screens/reports.png" class="img-fluid" alt=""></div>
+                      <div class="swiper-slide"><img src="img/screens/search.png" class="img-fluid" alt=""></div>
+                      <div class="swiper-slide"><img src="img/screens/codigopeti.png" class="img-fluid" alt=""></div>
+                      <div class="swiper-slide"><img src="img/screens/mypets.png" class="img-fluid" alt=""></div>
+                      <div class="swiper-slide"><img src="img/screens/favorites.png" class="img-fluid" alt=""></div>
+                      <!--<div class="swiper-slide">Slide 7</div>
                           <div class="swiper-slide">Slide 8</div>
                           <div class="swiper-slide">Slide 9</div>
                           <div class="swiper-slide">Slide 10</div>-->
-                      </div>
-                      <!-- Add Pagination -->
-                      <div class="swiper-pagination"></div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <!--<div class="swiper-pagination"></div>-->
                   </div>
 
-                  <!-- Swiper JS -->
-                  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-                  
+
+
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -150,9 +154,70 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 my-auto">
+        <div class="col-lg-8 my-auto" style="margin-top: 0 !important;">
           <div class="container-fluid">
-            <div class="row">
+            <div class="section-heading text-center" style="margin-bottom: 0 !important">
+              <h2>Conoce más sobre Peti</h2>
+            </div>
+
+            <!-- Swiper -->
+            <div class="swiper-container">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="feature-item feature-peti">
+                    <!--<img src="img/appIcons_ionic4/ios-home.svg" class="text-primary">-->
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-home"></i>
+                    <h3>Inicio</h3>
+                    <p class="text-muted">No más búsquedas sin sentido entre miles de grupos de redes sociales.<br>Peti te muestra los reportes más recientes de mascotas necesitadas de una manera clasificada y ordenada. <br><br></p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feature-item">
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-filing"></i>
+                    <h3>Reportes</h3>
+                    <p class="text-muted">¿Tu mascota se perdió?<br>¿Encontraste una mascota perdida?<br>¿Viste un animal que necesita ayuda?&nbsp;<br>¿Eres rescatista y estás dando un animal en adopción?<br>¿Estas buscando ayudar o adoptar una mascota?<br>Haz tu reporte en Peti y estará visible a otros usuarios dentro de tu misma zona de forma inmediata.</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feature-item">
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-search"></i>
+                    <h3>Búsquedas y Filtros</h3>
+                    <p class="text-muted">Con las búsquedas de Peti encuentra exactamente lo que quieres y visualiza resultados cercanos a tu zona. <br>Guarda tus búsquedas y recibe notificaciones de nuevos resultados. <br>¡Peti sigue buscando por tí!.</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feature-item">
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-qr-code-sharp"></i>
+                    <h3>Código Peti</h3>
+                    <p class="text-muted">Protege a tu mascota con una placa con código Peti. Si se extravía y alguien más la encuentra podrá escanear el código en la app y comunicarse contigo.<br>El código Peti es un código QR que se le asigna al dar de alta a tu mascota en la app.<br>Puedes descargar el código completamente gratis e imprimirlo en su collar o en algún lugar visible. También puedes adquirir para tu mascota una placa impresa con el código Peti <strong>aquí</strong>.</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feature-item">
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-paw"></i>
+                    <h3>Mis Mascotas</h3>
+                    <p class="text-muted">Registra a tus mascotas y administra su información para que en caso de extravío puedas generar de forma más rápida un reporte y la comunidad Peti te ayude a encontrarla.</p>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feature-item">
+                    <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-heart"></i>
+                    <h3>Mis Favoritos</h3>
+                    <p class="text-muted">Si encuentras un reporte interesante puedes marcarlo como favorito para poder consultarlo más adelante en la sección Mis Favoritos. </p>
+                  </div>
+                </div>
+              </div>
+              <!-- Add Pagination -->
+              <div class="swiper-pagination"></div>
+              <!-- Add Arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+            </div>
+
+            <!-- Swiper JS -->
+            <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+            <!--<div class="row">
               <div class="col-lg-4">
                 <div class="feature-item">
                   <i class="icon-home text-primary"></i>
@@ -197,7 +262,7 @@
                   <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
@@ -235,8 +300,8 @@
             <i class="fab fa-google-plus-g"></i>
           </a>
         </li>-->
-      </ul>
-    </div>
+            </ul>
+          </div>
   </section>
 
   <footer>
