waypoints library change
trying with cdn version

--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
 
   <!-- waypoints -->
   <!--<script src="/vendor/waypoints/noframework.waypoints.min.js"></script>-->
-  <script src="/vendor/waypoints/jquery.waypoints.js"></script>
+  <!--<script src="/vendor/waypoints/jquery.waypoints.min.js"></script>-->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js'/>
 
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
