waypoint include correction

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
   <!-- waypoints -->
   <!--<script src="/vendor/waypoints/noframework.waypoints.min.js"></script>-->
-  <script src="/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="vendor/waypoints/jquery.waypoints.min.js"></script>
 
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
