cambios aviso y términos
se usan ahora los archivos aviso-de-privacidad.html y terminos-y-condiciones.html en vez de aviso.html y terminos.html que se abrian como modales en index. Ahora son páginas independientes

--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
       <p>&copy; Peti 2020. Derechos Reservados.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
-          <a href="aviso.html" id="aviso-privacidad">Aviso de Privacidad</a>
+          <a href="aviso-de-privacidad.html" id="aviso-privacidad">Aviso de Privacidad</a>
         </li>
         <li class="list-inline-item">
-          <a href="terminos.html" id="terminos">Términos y Condiciones</a>
+          <a href="terminos-y-condiciones.html" id="terminos">Términos y Condiciones</a>
         </li>
         <!--<li class="list-inline-item">
           <a href="#">FAQ</a>
