texto cambiado or a o

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
           </div>
-          <div id="download-smalltext" class="small-text">* Requiere Android OS 4.3+ or Apple iOS 9.3+</div>
+          <div id="download-smalltext" class="small-text">* Requiere Android OS 4.3+ o Apple iOS 9.3+</div>
         </div>
       </div>
     </div>
