test links to store added
need to test with real devices and links

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <h2 id="download-title" class="section-heading">¡Descubre cómo puedes ayudar!</h2>
           <p id="download-text">Peti está disponible para iOS y Android. Descárgala ahora y empieza a ayudar a mascotas necesitadas.</p>
           <div id="download-badges" class="badges">
-            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+            <a class="badge-link" href="download.html?button=1" id="android-btn" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
+            <a class="badge-link" href="download.html?button=2" id="ios-btn" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
           </div>
           <div id="download-smalltext" class="small-text">* Requiere Android OS 4.3+ o Apple iOS 9.3+</div>
         </div>
