cambios aviso de privacodad y terminos y condiciones
modificaciones para que se vean bien las páginas en dispositivos móviles y tabletas

--- a/terminos-y-condiciones.html
+++ b/terminos-y-condiciones.html
@@ -28,6 +28,7 @@
   <link href="css/new-age.css" rel="stylesheet">
 
   <!-- Custom styles for this page -->
+  <link href="css/policy-terms.css" rel="stylesheet">
 
 </head>
 
@@ -66,7 +67,7 @@
 
   </header>
 
-  <section style="margin-top: -775px; padding-top: 0;">
+  <section class="doc-container">
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-12">
