updating social media links
new facebook and twitter urls

--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
             <hr>
             <ul class="list-inline list-social" id="contact-buttons">
               <li class="list-inline-item social-facebook grow">
-                <a href="https://www.facebook.com/Peti-100713098597037" target="_blank" class="text-center">
+                <a href="https://www.facebook.com/PetiOficial/" target="_blank" class="text-center">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li class="list-inline-item social-twitter grow">
-                <a href=" https://twitter.com/Peti83424145" target="_blank" class="text-center">
+                <a href="https://twitter.com/PetiAppOficial" target="_blank" class="text-center">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
