--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <p><a class="navbar-brand js-scroll-trigger" href="#page-top">Peti</a></p>
-      <p class="site-description">Ayuda a mascotas necesitadas </p>
+      <p><a class="navbar-brand js-scroll va-trigger" href="#page-top">Peti</a></p>
+      <p class="site-description">Ayuda a animales necesitados </p>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <!--Menú-->
         <i class="fas fa-bars"></i>
@@ -84,7 +84,7 @@
             
             <div id="peti-description-container">
               <h1 class="has-foreground-dark-color" id="welcome-title">Bienvenido a Peti</h1>
-              <p style="font-size:18px;line-height:1.6;">Peti es una aplicación móvil gratuita en la que puedes ayudar a animales necesitados. Crea reportes, realiza búsquedas, guárdalas y recibe notificaciones de nuevos resultados. Identifica a tu mascota perdida con el código Peti, si alguien la encuentra podrá escanear el código en la app y comunicarse contigo.</p>
+              <p style="font-size:18px;line-height:1.6;">Peti es una aplicación móvil gratuita en la que puedes ayudar a animales necesitados. Crea reportes, realiza búsquedas, guárdalas y recibe notificaciones de nuevos resultados.</p>
             </div>
             <a id="download_btn" href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Descárgala ahora!</a>
           </div>
@@ -113,7 +113,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 id="download-title" class="section-heading">¡Descubre cómo puedes ayudar!</h2>
-          <p id="download-text">Peti está disponible para iOS y Android. Descárgala ahora y empieza a ayudar a mascotas necesitadas.</p>
+          <p id="download-text">Peti está disponible para iOS y Android. Descárgala ahora y empieza a ayudar a animalitos necesitados.</p>
           <div id="download-badges" class="badges">
             <a class="badge-link" href="download.html?button=1" id="android-btn" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="download.html?button=2" id="ios-btn" target="_blank"><img src="img/app-store-badge.svg" alt=""></a>
@@ -145,7 +145,7 @@
                       <div class="swiper-slide"><img src="img/screens/reports.png" class="img-fluid" alt=""></div>
                       <div class="swiper-slide"><img src="img/screens/search.png" class="img-fluid" alt=""></div>
                       <!--<div class="swiper-slide"><img src="img/screens/codigopeti.png" class="img-fluid" alt=""></div>-->
-                      <div class="swiper-slide"><img src="img/screens/mypets.png" class="img-fluid" alt=""></div>
+                      <!--<div class="swiper-slide"><img src="img/screens/mypets.png" class="img-fluid" alt=""></div>-->
                       <div class="swiper-slide"><img src="img/screens/favorites.png" class="img-fluid" alt=""></div>
                     </div>
                   </div>
@@ -195,6 +195,7 @@
                     <p class="text-muted">Protege a tu mascota con una placa con código Peti. Si se extravía y alguien más la encuentra podrá escanear el código en la app y comunicarse contigo.<br>El código Peti es un código QR que se le asigna al dar de alta a tu mascota en la app.<br>Puedes descargar el código completamente gratis e imprimirlo en su collar o en algún lugar visible. También puedes adquirir para tu mascota una placa impresa con el código Peti <strong>aquí</strong>.</p>
                   </div>
                 </div>-->
+                <!--
                 <div class="swiper-slide">
                   <div class="feature-item">
                     <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-paw"></i>
@@ -202,6 +203,7 @@
                     <p class="text-muted">Registra a tus mascotas y administra su información para que en caso de extravío puedas generar de forma más rápida un reporte y la comunidad Peti te ayude a encontrarla.</p>
                   </div>
                 </div>
+                -->
                 <div class="swiper-slide">
                   <div class="feature-item">
                     <i aria-hidden="true" data-icon="&#xe001;" class="icon-ios-heart"></i>
