--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="La app de ayuda a animales necesitados.">
   <meta name="author" content="">
+  
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://www.peti-app.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Bienvenido a Peti">
+  <meta property="og:description" content="Ayuda a animales necesitados.">
+  <meta property="og:image" content="img/petiPanda.svg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="peti-app.com">
+  <meta property="twitter:url" content="https://www.peti-app.com/">
+  <meta name="twitter:title" content="Bienvenido a Peti">
+  <meta name="twitter:description" content="Ayuda a animales necesitados.">
+  <meta name="twitter:image" content="img/petiPanda.svg">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
   <title>Bienvenido a Peti</title>
 
