Fix icon in metas.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="La app de ayuda a animales necesitados.">
+  <meta name="description" content="Ayuda a animales necesitados.">
   <meta name="author" content="">
   
   <!-- Facebook Meta Tags -->
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Bienvenido a Peti">
   <meta property="og:description" content="Ayuda a animales necesitados.">
-  <meta property="og:image" content="img/petiPanda.svg">
+  <meta property="og:image" content="img/icon.png">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
   <meta property="twitter:url" content="https://www.peti-app.com/">
   <meta name="twitter:title" content="Bienvenido a Peti">
   <meta name="twitter:description" content="Ayuda a animales necesitados.">
-  <meta name="twitter:image" content="img/petiPanda.svg">
+  <meta name="twitter:image" content="img/icon.png">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
