--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Bienvenido a Peti">
   <meta property="og:description" content="Ayuda a animales necesitados.">
-  <meta property="og:image" content="img/icon.png">
+  <meta property="og:image" content="https://peti-app.com/img/petiPanda.svg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
   <meta property="twitter:url" content="https://www.peti-app.com/">
   <meta name="twitter:title" content="Bienvenido a Peti">
   <meta name="twitter:description" content="Ayuda a animales necesitados.">
-  <meta name="twitter:image" content="img/icon.png">
+  <meta name="twitter:image" content="https://peti-app.com/img/petiPanda.svg">
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
