Fix social media links

--- a/index.html
+++ b/index.html
@@ -265,8 +265,13 @@
             <hr>
             <ul class="list-inline list-social" id="contact-buttons">
               <li class="list-inline-item social-facebook grow">
-                <a href="https://www.facebook.com/PetiOficial/" target="_blank" class="text-center">
+                <a href="https://www.facebook.com/PetiAppOficial/" target="_blank" class="text-center">
                   <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="list-inline-item social-instagram grow">
+                <a href="https://www.instagram.com/PetiAppOficial/" target="_blank" class="text-center">
+                  <i class="fab fa-instagram-f"></i>
                 </a>
               </li>
               <li class="list-inline-item social-twitter grow">
