--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               </li>
               <li class="list-inline-item social-instagram grow">
                 <a href="https://www.instagram.com/PetiAppOficial/" target="_blank" class="text-center">
-                  <i class="fab fa-instagram-f"></i>
+                  <i class="fab fa-instagram"></i>
                 </a>
               </li>
               <li class="list-inline-item social-twitter grow">
