--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <input id="ohnopot" type="text" name="ohnopot" value="" />
                 </fieldset>
 
-                <div class="g-recaptcha" data-sitekey="6LdIU84dAAAAADSolsgsP6gS7fU1dgAzmrD5DvWM"></div>
+                <div id="grecaptcha" class="g-recaptcha" data-sitekey="6LdIU84dAAAAADSolsgsP6gS7fU1dgAzmrD5DvWM"></div>
                 <br/>
                 <button class="button-success pure-button button-xlarge">
                   <i class="fa fa-paper-plane"></i>&nbsp;Enviar</button>
