--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
   <!-- Link Swiper's CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css">
 
   <!-- CSS Animate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -155,7 +155,7 @@
               <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup -->
-                  <!-- Swiper -->
+                  <!-- Swiper 6-->
                   <div class="swiper-phone">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide"><img src="img/screens/home.png" class="img-fluid" alt=""></div>
@@ -335,7 +335,7 @@
   <script src="vendor/waypoints/jquery.waypoints.min.js"></script>
 
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
 
   <!-- jquery validation -->
   <script src="vendor/jquery-validation/jquery.validate.min.js"></script>
